# whisper-small-zh

./: .dockerignore  .gitattributes  Dockerfile  branch_contents.bat  branch_contents.sh  pyproject.toml  requirements.txt  run.py
api/: __init__.py  routes.py  utils.py
model/: config.json  generation_config.json  rng_state.pth  scaler.pt  scheduler.pt  trainer_state.json
