[tool.poetry]
name = "whisper-small-zh"
version = "0.1.0"
description = ""
authors = ["dalu-sun <brianwashburne@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
torch = "1.13.1"
torchaudio = "0.13.1"
transformers = "4.30.0"
flask = "^3.0.0"
fastapi = "^0.104.0"
librosa = "^0.10.1"
werkzeug = "^3.0.1"
opencc = "^1.1.7"
pypinyin = "^0.49.0"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
